	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.0


NEW FEATURES

    o	The included PCRE sources have been updated to version 4.4,
	and the configure check now requires PCRE >= 4.0.  This is in
	preparation for documenting exactly what grep(perl=TRUE) does.


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.


STANDARD PACKAGES

    o	undoc() in `tools' has a new default of	 `use.values = NULL'
	which produces a warning whenever the default values of function
	arguments differ between documenation and code.
	Note that this affects "R CMD check" as well.


	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.1


NEW FEATURES

    o	There is now a "Complex" S3 group generic (a side-effect of
	fixing up the corresponding S4 group generic).

    o	help("regex") will now give a (preliminary) description of the
	regular expressions used in R.  More details (including a
	description of Perl-like regular expressions) will be added to
	later releases of R.

    o   The startup message now shows the R Foundation as copyright
        holder, and includes the R ISBN number and a pointer to the new
        citation() function.

    o	The solve() function now uses the `tol' argument for all
        non-complex cases.  The default tolerance for LINPACK is 1e-7,